# aykracy

./: .env_sample  .gitignore  OAI_CONFIG_LIST_sample  README.md  requirements.txt  requirements_versions.txt  run.py  run2.py
aykracy/autogen/: autogen_gvt.py  autogen_gvt_en.py
aykracy/crewai/: crewai_gvt copy.py  crewai_gvt.py  crewai_gvt_en.py  crewai_gvt_manager.py
data/: gouvernement copy.json  gouvernement.json
experiments/: README.result.md  crew_hierarchie.py
experiments/crewai_gvt/: README.md  pyproject.toml  report.md  report_gvt1.md  report_gvt_dossiers assemblée.md  report_gvt_proposal.md
experiments/crewai_gvt/src/crewai_gvt/: crew.py  main.py
experiments/crewai_gvt/src/crewai_gvt/config/: tasks.yaml
