[tool.poetry]
name = "crewai_gvt"
version = "0.1.0"
description = "crewai_gvt using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
crewai_gvt = "crewai_gvt.main:run"
run_crew = "crewai_gvt.main:run"
train = "crewai_gvt.main:train"
replay = "crewai_gvt.main:replay"
test = "crewai_gvt.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
